@@ -4,6 +4,7 @@ Changelog Bypass Paywalls Clean - Chrome
 Post-release
 Add El Tribuno (ar)
 Add Sabado.pt
+Remove VmnMedia.nl Group (fix obsolete)
 Fix Australia News Corp (amp-fix)
 Fix Cmjornal.pt & Record.pt (amp)
 Fix Grupo Abril (js-inline)
